float_eq/tests/derive_tests/derive_float_eq/derive_float_eq_missing_ulps_tol.stderr
error: Missing ULPs tolerance type name required to derive trait.

       help: try specifying `ulps_tol = "MyComplex32Ulps"` in `derive_float_eq`.
 --> $DIR/derive_float_eq_missing_ulps_tol.rs:3:1
  |
3 | / #[derive_float_eq(
4 | |     //ulps_tol = "MyComplex32Ulps",
5 | |     debug_ulps_diff = "MyComplex32UlpsDiff"
6 | | )]
  | |__^
  |
  = note: this error originates in the attribute macro `derive_float_eq` (in Nightly builds, run with -Z macro-backtrace for more info)
